# Camvox

./: AUTHORS  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  aminclude.am  configure  configure.in
autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.1  traces.2  traces.3  traces.5
camvox/: CSGCylinder.cc  CSGCylinder.h  CSGIntersection.cc  CSGIntersection.h  CSGInvert.cc  CSGInvert.h  CSGObject.cc  CSGObject.h  CSGOperation.cc  CSGOperation.h  CSGPlane.cc  CSGPrimative.cc  CSGPrimative.h  CSGSphere.cc  CSGSphere.h  FreeList.cc  FreeList.h  GMath.h  Interval.h  Makefile.am  Makefile.bak  Makefile.in  Matrix.h  MillJob.h  Vector.h  VoxCoord.h  VoxNode.cc  VoxNode.h  VoxOperation.h  VoxTree.cc  VoxTree.h  VoxTree_layers.cc  VoxTree_prune.cc  Voxel.h  camvox.h  camvox.pc.in
doc/: Doxyfile
doc/src/: documentation.html  download.html  index.html
doc/src/include/: header.inc
doc/website/: contact.html  documentation.html  download.html  index.html
doc/website/images/: coordsystem.graffle  corner_image.graffle
doc/website/include/: camvox.css
examples/: shaft.py  test.py  test.sh
pyext/: Makefile.am  Makefile.in  __init__.py  camvox.py  swig.i  swig_wrap.cpp
trunk/: Makefile.am  Makefile.in  README  acinclude.m4  boot.sh  config.h.in  configure  configure.in
trunk/autom4te.cache/: output.1  output.3  output.4  output.5  requests  traces.0  traces.1  traces.4  traces.5
trunk/camvox/: CSGDifference.cc  CSGDifference.h  CSGInvert.cc  CSGInvert.h  CSGObject.cc  CSGObject.h  CSGOperation.cc  CSGOperation.h  CSGPlane.h  CSGPrimative.cc  CSGPrimative.h  CSGSphere.cc  CSGUnion.cc  CSGUnion.h  Exceptions.h  FreeList.h  GMath.h  Interval.h  Makefile.am  Makefile.in  Matrix.h  MillCoord.h  Vector.h  VoxCoord.cc  VoxCoord.h  VoxNode.cc  VoxOperation.h  VoxTree.cc  VoxTree.h  VoxTree_addCSGObject.cc  VoxTree_generatePOVCode.cc  VoxTree_layers.cc  VoxTree_value.cc  Voxel.h  camvox-1.0.pc.in  camvox.cc  camvox.h
trunk/doc/: Doxyfile  generate_website  upload_website.sh
trunk/doc/src/: contact.html  documentation.html  index.html
trunk/doc/src/include/: header.inc
trunk/doc/website/: contact.html  documentation.html  download.html  index.html
trunk/doc/website/images/: logo.graffle
trunk/doc/website/include/: camvox.css  doxygen.css  header-doxygen.html
trunk/examples/: shaft.py  shaft.sh  test.py
trunk/pyext/: Makefile.am  Makefile.in  camvox.py  shapes.py  swig.i  swig_wrap.cpp
