#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(camvox, 0.1, Take.Vos@vosgames.nl)
#AM_INIT_AUTOMAKE(test, 0.0.1)
AM_INIT_AUTOMAKE()
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
#AC_PROG_LEX
#AC_PROG_YACC
AC_PROG_LIBTOOL
AC_PYTHON_DEVEL([>= '2.5'])
AM_PATH_PYTHON
AC_PROG_SWIG
SWIG_ENABLE_CXX
SWIG_PYTHON
AX_BOOST_BASE([1.35.0])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_UINT32_T

# Checks for library functions.
AC_CHECK_FUNCS([sqrt])

AC_CONFIG_FILES([Makefile pyext/Makefile camvox/Makefile camvox/camvox-1.0.pc])
AC_OUTPUT

